partially revert rev 1.530 because of regression bug 201108. this will also be on the 1.4 branch. code=radha r=darin,me